rp label latest deployed s4 hana v0.1

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,12 +3,12 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Rating Plates Labels Priniting
+appTitle=Rating Plates Labels Printing
 
 #YDES: Application description
-appDescription=Rating Plates Labels Priniting
+appDescription=Rating Plates Labels Printing
 #XTIT: Main view title
-title=Rating Plates Labels Priniting
+title=Rating Plates Labels Printing
 plant=Plant
 printer=Printer
 job=Job Name
@@ -22,3 +22,9 @@ material=Material number
 serial=Serial number (optional)
 addtext=Additional Text
 materials=Materials
+
+#XFLD,87
+ratingplates-manage.flpTitle=Rating Plates Labels Printing
+
+#XFLD,87
+ratingplates-manage.flpSubtitle=Rating Plates Labels Printing
