recent changes deployed for client testing

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,6 +22,7 @@ material=Material number
 serial=Serial number (optional)
 addtext=Additional Text
 materials=Materials
+printers=Available Printers
 
 #XFLD,87
 ratingplates-manage.flpTitle=Rating Plates Labels Printing
